2009-04-25  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c:
	Renamed tag_data -> TagData and recomm_data -> RecommData
	(controller_tag_track):
	Include session object in TagData struct

2009-04-25  Alberto Garcia  <agarcia@igalia.com>

	* src/xmlrpc.[ch]:
	Mark xmlrpc.c as legacy API.

	* src/controller.[ch]
	* src/vgl-main-window.c:
	Remove unused includes and definitions.

2009-04-25  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(controller_add_to_playlist, add_to_playlist_thread):
	Use the new lastfm_ws_add_to_playlist() method.

2009-04-25  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.h
	* src/lastfm-ws.c (+lastfm_ws_add_to_playlist):
	Method to add a track to a playlist using the new API (it's a
	wrapper for the old API by now).

2009-04-24  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_tag_track, tag_track_thread):
	Use the new lastfm_ws_tag_track() method

2009-04-24  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.h
	* src/lastfm-ws.c (+lastfm_ws_tag_track):
	Method to tag tracks using the new API (it's a wrapper for the old
	API by now).

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/xmlrpc.h
	* src/xmlrpc.c (+recommend_track):
	Bring back recommend_track(), at least while the v2.0 API doesn't
	have an album.share method.

	* src/lastfm-ws.c (lastfm_ws_share_track):
	Use the old API to share (recommend) albums.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.c
	(lastfm_ws_session_new, lastfm_ws_session_unref)
	(lastfm_ws_get_session_from_token, lastfm_ws_get_session):
	Store password in LastfmWsSession object.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/xmlrpc.c (-recommend_track, -love_ban_track):
	Remove deprecated methods to love, ban and recommend.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(controller_recomm_track, recomm_track_thread):
	Use the recommend (share) method from the v2.0 API
